<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/honeydew">

    <Button
        android:id="@+id/buttonNetWorth"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="7dp"
        android:text="@string/net_worth_calculator"
        app:layout_constraintBottom_toTopOf="@+id/buttonNetWorthProgression"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNetWorthProgression"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:text="@string/net_worth_progression"
        app:layout_constraintBottom_toTopOf="@+id/buttonAssetsInventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNetWorth" />

    <Button
        android:id="@+id/buttonAssetsInventory"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="323dp"
        android:text="@string/assets_inventory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNetWorthProgression" />

</androidx.constraintlayout.widget.ConstraintLayout>