<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/honeydew">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/honeydew">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTickerSymbolTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="@string/ticker"
                android:textAlignment="center"
                android:textSize="35dp" />

            <Spinner
                android:id="@+id/spinnerTickerSymbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/array_ticker_symbols" />
            <TextView
                android:id="@+id/textViewDateTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="35dp" />
            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/biryani_extralight"
                android:textAlignment="center"
                android:textSize="35dp" />
            <TextView
                android:id="@+id/textViewOpeningPriceTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="@string/open"
                android:textAlignment="center"
                android:textSize="35dp" />
            <TextView
                android:id="@+id/textViewOpeningPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/biryani_extralight"
                android:textAlignment="center"
                android:textSize="35dp" />
            <TextView
                android:id="@+id/textViewClosingPriceTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="@string/close"
                android:textAlignment="center"
                android:textSize="35dp" />
            <TextView
                android:id="@+id/textViewClosingPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/biryani_extralight"
                android:textAlignment="center"
                android:textSize="35dp" />
            <Button
                android:id="@+id/buttonRetrieveStockData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/retrieve_stock_data" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>