<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/honeydew">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="-35dp">

        <LinearLayout
            android:layout_width="206dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewAssets"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="Assets"
                android:textAlignment="center"
                android:textSize="35dp" />
            <TextView
                android:id="@+id/textView401k"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="401k"
                android:textAlignment="center"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/editText401k"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewRothIRA"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="@string/net_worth_roth_ira"
                android:textAlignment="center"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/editTextRothIRA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewHSA"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="@string/net_worth_hsa"
                android:textAlignment="center"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/editTextHSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewSavings"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="@string/net_worth_savings"
                android:textAlignment="center"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/editTextSavings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewAssetsInventory"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="Assets Inventory"
                android:textAlignment="center"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/editTextAssetsInventory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLiabilities"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="Liabilities"
                android:textAlignment="center"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/textViewCreditCard1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="Credit Card 1"
                android:textAlignment="center"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/editTextCreditCard1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20px"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewCreditCard2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="Credit Card 2"
                android:textAlignment="center"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/editTextCreditCard2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20px"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewPersonalLoans"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="Loans"
                android:textAlignment="center"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/editTextLoans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20px"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewMortgage"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/biryani_extralight"
                android:text="Mortgage"
                android:textAlignment="center"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/editTextMortgage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20px"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
